--- a/rain.html
+++ b/rain.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Math Rain</title>
+<title>Code Rain</title>
 <style>
-  /* Full viewport, vertical orientation */
   html, body {
     margin: 0;
     padding: 0;
@@ -13,6 +12,8 @@
     width: 100vw;
     background: #111;
     overflow: hidden;
+    font-family: monospace;
+    color: #0f0;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -20,9 +21,8 @@
 
   .drop {
     position: absolute;
-    color: #0f0;
-    font-size: 1.2rem;
-    font-family: monospace;
+    white-space: nowrap;
+    font-size: 1rem;
     user-select: none;
     pointer-events: none;
     animation: fall linear infinite;
@@ -38,18 +38,27 @@
 <body>
 
 <script>
-  const symbols = ['1','2','3','4','5','6','7','8','9','0','+','-','×','÷','=','√','π'];
-  const dropCount = 50; // number of raindrops
+  const codeSnippets = [
+    "Math.random() * 100",
+    "Math.floor(Math.random() * 50)",
+    "Math.sin(Math.random())",
+    "Math.cos(Math.random() * Math.PI)",
+    "Math.pow(2, Math.random()*10)",
+    "Math.sqrt(Math.random()*100)",
+    "Math.round(Math.random()*1000)"
+  ];
+
+  const dropCount = 50;
 
   for(let i = 0; i < dropCount; i++) {
     const drop = document.createElement('div');
     drop.className = 'drop';
-    drop.textContent = symbols[Math.floor(Math.random() * symbols.length)];
+    drop.textContent = codeSnippets[Math.floor(Math.random() * codeSnippets.length)];
     document.body.appendChild(drop);
 
-    const leftPos = Math.random() * 100; // random horizontal position
-    const duration = 3 + Math.random() * 4; // random fall duration 3-7s
-    const delay = Math.random() * 5; // random start delay
+    const leftPos = Math.random() * 100; // horizontal
+    const duration = 3 + Math.random() * 4; // fall speed
+    const delay = Math.random() * 5; // start delay
 
     drop.style.left = leftPos + 'vw';
     drop.style.animationDuration = duration + 's';
