--- a/rain.html
+++ b/rain.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Code Rain</title>
+<title>Random Rain</title>
 <style>
   html, body {
     margin: 0;
@@ -12,57 +12,45 @@
     width: 100vw;
     background: #111;
     overflow: hidden;
-    font-family: monospace;
-    color: #0f0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
   }
 
   .drop {
     position: absolute;
-    white-space: nowrap;
-    font-size: 1rem;
-    user-select: none;
-    pointer-events: none;
-    animation: fall linear infinite;
+    width: 2px;
+    height: 15px;
+    background: #0f0;
+    opacity: 0.8;
+    border-radius: 50%;
+    animation-name: fall;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
   }
 
   @keyframes fall {
-    0% { transform: translateY(-2rem); opacity: 0; }
-    10% { opacity: 1; }
-    100% { transform: translateY(100vh); opacity: 0; }
+    0% { transform: translateY(-20px); }
+    100% { transform: translateY(100vh); }
   }
 </style>
 </head>
 <body>
 
 <script>
-  const codeSnippets = [
-    "Math.random() * 100",
-    "Math.floor(Math.random() * 50)",
-    "Math.sin(Math.random())",
-    "Math.cos(Math.random() * Math.PI)",
-    "Math.pow(2, Math.random()*10)",
-    "Math.sqrt(Math.random()*100)",
-    "Math.round(Math.random()*1000)"
-  ];
+  const dropCount = 100; // number of raindrops
 
-  const dropCount = 50;
-
-  for(let i = 0; i < dropCount; i++) {
+  for (let i = 0; i < dropCount; i++) {
     const drop = document.createElement('div');
     drop.className = 'drop';
-    drop.textContent = codeSnippets[Math.floor(Math.random() * codeSnippets.length)];
+    
+    // random horizontal position
+    drop.style.left = Math.random() * 100 + 'vw';
+    // random animation duration (fall speed)
+    drop.style.animationDuration = 2 + Math.random() * 3 + 's';
+    // random start delay
+    drop.style.animationDelay = Math.random() * 5 + 's';
+    // random opacity for variation
+    drop.style.opacity = 0.4 + Math.random() * 0.6;
+
     document.body.appendChild(drop);
-
-    const leftPos = Math.random() * 100; // horizontal
-    const duration = 3 + Math.random() * 4; // fall speed
-    const delay = Math.random() * 5; // start delay
-
-    drop.style.left = leftPos + 'vw';
-    drop.style.animationDuration = duration + 's';
-    drop.style.animationDelay = delay + 's';
   }
 </script>
 
