--- a/rain.html
+++ b/rain.html
@@ -18,8 +18,6 @@
     position: absolute;
     width: 2px;
     height: 15px;
-    background: #0f0;
-    opacity: 0.8;
     border-radius: 50%;
     animation-name: fall;
     animation-timing-function: linear;
@@ -35,12 +33,15 @@
 <body>
 
 <script>
-  const dropCount = 100; // number of raindrops
+  const dropCount = 100;
+  const colors = ['#fff', '#7FDBFF']; // white or X-ray light blue
 
   for (let i = 0; i < dropCount; i++) {
     const drop = document.createElement('div');
     drop.className = 'drop';
     
+    // random color
+    drop.style.background = colors[Math.floor(Math.random() * colors.length)];
     // random horizontal position
     drop.style.left = Math.random() * 100 + 'vw';
     // random animation duration (fall speed)
