--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Rain & Clouds</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
 
+  iframe {
+    border: none;
+    flex: 1; /* fills half screen if you want two, or all if one */
+    width: 100%;
+  }
+
+  /* Optional: stack one on top of the other */
+  #cloudsFrame {
+    height: 50%; /* adjust as needed */
+  }
+
+  #rainFrame {
+    height: 50%; /* adjust as needed */
+  }
+</style>
+</head>
+<body>
+
+<iframe id="cloudsFrame" src="clouds.html"></iframe>
+<iframe id="rainFrame" src="rain.html"></iframe>
+
+</body>
+</html>
