--- a/index.html
+++ b/index.html
@@ -3,38 +3,41 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Rain & Clouds</title>
+<title>Rain & Clouds Overlay</title>
 <style>
-  body {
+  html, body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
+    position: relative;
   }
 
   iframe {
-    border: none;
-    flex: 1; /* fills half screen if you want two, or all if one */
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    border: none;
   }
 
-  /* Optional: stack one on top of the other */
+  /* Ensure clouds are on top */
   #cloudsFrame {
-    height: 50%; /* adjust as needed */
+    z-index: 2;
+    pointer-events: none; /* allows clicks to pass through clouds if needed */
   }
 
   #rainFrame {
-    height: 50%; /* adjust as needed */
+    z-index: 1;
   }
 </style>
 </head>
 <body>
 
-<iframe id="cloudsFrame" src="clouds.html"></iframe>
 <iframe id="rainFrame" src="rain.html"></iframe>
+<iframe id="cloudsFrame" src="clouds.html"></iframe>
 
 </body>
 </html>
