--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
     width: 100%;
+    height: 100%;
     overflow: hidden;
-    position: relative;
+    background: #000; /* optional background if needed */
   }
 
   iframe {
@@ -23,10 +23,10 @@
     border: none;
   }
 
-  /* Ensure clouds are on top */
+  /* Clouds on top */
   #cloudsFrame {
     z-index: 2;
-    pointer-events: none; /* allows clicks to pass through clouds if needed */
+    pointer-events: none; /* lets clicks pass through clouds */
   }
 
   #rainFrame {
